--- a/themes/kmom03/scss/style.scss
+++ b/themes/kmom03/scss/style.scss
@@ -13,6 +13,7 @@ $text-color: #333;
 
 * {
     font-family: 'Roboto', sans-serif;
+    overflow: hidden; /* hide overflow content */
 }
 
 .container,
